--- a/views/setrim.hbs
+++ b/views/setrim.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light px-5">
-  <div class="navbar-brand"><h2>Remindoo</h2><p>{{username}}</p></div>
+  <div class="navbar-brand"><h2>Remindme</h2><p>{{username}}</p></div>
   <div class="ml-auto">
     <form method="POST" action="/logout">
       <button class="btn btn-danger" type="submit">Logout</button>
