--- a/views/thank-you.hbs
+++ b/views/thank-you.hbs
@@ -2,15 +2,15 @@
   <div class="d-flex justify-content-center align-items-center h-100">
     {{#if saved}}
       <div>
-        <h1 class="text-center" style="color:green">Reminder saved succeefully!
-          You'll get an email on your task day.</h1>
+        <h1 class="text-center" style="color:rgb(101, 178, 101)">Reminder saved succeefully!
+          your are get an email on your task day.</h1>
         <h5><a href="/" class="mt-3 text-decoration-none">Add another reminder
             🔔</a></h5>
       </div>
     {{/if}}
     {{#if deleted}}
       <div>
-        <h1 class="text-center" style="color:green">Reminder deleted
+        <h1 class="text-center" style="color:rgb(65, 144, 65)">Reminder deleted
           succeefully!
         </h1>
         <h5><a href="/" class="mt-3 text-decoration-none">Continue to reminder
