--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,7 +5,8 @@
         <h1
           class="mx-auto text-white my-auto"
           style="font-weight:bold"
-        >Remindoo</h1>
+          style="color: rgb(159, 159, 206);"
+        >Remind Me</h1>
         <h6 class="text-white">A reminder app</h6>
         <div class="card p-5 col-10 col-md-6">
           <h3>Login</h3>
@@ -13,7 +14,7 @@
             <h6 class="mt-3"><label>Email</label></h6>
             <input
               type="email"
-              placeholder="Enter email"
+              placeholder="Enter your email"
               class="form-control mt-2"
               required="true"
               name="email"
@@ -29,7 +30,7 @@
             <button class="btn btn-success mt-4" type="submit">Login</button>
           </form>
           <hr />
-          <div>New to Remindoo?
+          <div>New to Remind Me?
             <a href="/signup">Sign Up</a></div>
         </div>
       </div>
