--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -5,7 +5,7 @@
         <h1
           class="mx-auto text-white my-0"
           style="font-weight:bold"
-        >Remindoo</h1>
+        >Remind Me</h1>
         <h6 class="text-white">A reminder app</h6>
 
         <div class="card p-5 col-10 col-md-6">
